Added Page to record weight values. will be changing the 'converter' into a weight record-keeper. Will change fragment_weight.xml to reflect this. Will also change the Time Fragment to serve as a record-keeper of sorts for something else.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragment_content"
-        android:name="com.ewbugs.learningbottomnavigationbarkotlin.WeightFragment"
+        android:name="com.ewbugs.learningbottomnavigationbarkotlin.weight.WeightFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="vertical"
