Fixed some UI/UX issues. Data updating now works.

--- a/app/src/main/res/layout/activity_edit_weight_record.xml
+++ b/app/src/main/res/layout/activity_edit_weight_record.xml
@@ -12,7 +12,7 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/Weight"
+        android:hint="@string/measurement"
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
