--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,9 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="dark_grey">#323232</color>
-    <color name="light_grey">#AFAFAF</color>
+    <color name="light_gray">#AFAFAF</color>
+
+    <color name="light_grey">#777A7A</color>
+    <color name="title_heading_fragment_weight">#F4FF81</color>
+
 </resources>
